crates/eure-macros/tests/compile_fail/object_key_duplicate_wire_name.rs
use eure::ObjectKey;

#[derive(ObjectKey)]
enum Bad {
    #[eure(rename = "same")]
    First,
    #[eure(rename = "same")]
    Second,
}

fn main() {}
